@@ -5,6 +5,7 @@
   on e.g. Windows 7, where IPV6 is offered as the first choice but may not be
   available.
 - Deal with long logging messages properly (bug #785882).
+- Fix library compilation on Symbian - no pselect() available.
 
 0.10.1 - 20110512
 =================
